--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<a href="N%26R%20HOME%20DECOR%20BROCHURE.pdf">
+<a href="https://github.com/SailorJerryTR/NAhomeBrochurePDF/blob/main/N%26R%20HOME%20DECOR%20BROCHURE.pdf">
 </html>
